<resources>
    <string name="app_name">FireBase_CURD</string>
    <string name="_privacy_policy"><![CDATA[By Signing Up, you agree to our\nTerms & Privacy Policy]]></string>
    <string name="already_have_an_account_login">Already have an account? <b>Login</b></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account <b>Sign-up</b></string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>